--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,10 @@ a {
   --accent-text-color: #2196f3;
   --white-proect-color: #ffffff;
   --transition-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --bg-image-gradient: linear-gradient(
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)
+  ) ;
 }
 
 .header__main-nav {
@@ -91,7 +95,7 @@ a {
   border-bottom: 1px solid #ececec;
 }
 
-.header__btn-menu {
+.menu-toggle {
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -100,12 +104,12 @@ a {
   background-color: transparent;
 }
 @media screen and (min-width: 768px) {
-  .header__btn-menu {
+  .menu-toggle {
     display: none;
   }
 }
 
-.menu {
+.menu-container {
   position: fixed;
   display: block;
   top: 0;
@@ -114,8 +118,16 @@ a {
   width: 100%;
   height: 100%;
   background-color: var(--white-proect-color);
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform-origin: top right;
+          transform-origin: top right;
+  -webkit-transition: -webkit-transform var(--transition-time);
+  transition: -webkit-transform var(--transition-time);
+  transition: transform var(--transition-time);
+  transition: transform var(--transition-time), -webkit-transform var(--transition-time);
 }
-.menu > .menu-wrapper {
+.menu-container > .menu-wrapper {
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -130,12 +142,17 @@ a {
   overflow: auto;
 }
 @media screen and (min-width: 768px) {
-  .menu {
+  .menu-container {
     display: none;
   }
 }
 
-.header__btn-close {
+.menu-container.is-open {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.menu-wrapper .menu-toggle {
   position: absolute;
   top: 0;
   right: 0;
@@ -144,7 +161,7 @@ a {
   border: none;
   background-color: transparent;
 }
-.header__btn-close:hover, .header__btn-close:focus {
+.menu-wrapper .menu-toggle:hover, .menu-wrapper .menu-toggle:focus {
   fill: var(--accent-text-color);
 }
 
@@ -400,8 +417,7 @@ a {
 }
 
 .hero {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-mob.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mob.jpg);
+  background-image: var(--bg-image-gradient), url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-color: #c4c4c4;
   background-position: center;
@@ -414,17 +430,15 @@ a {
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-mob2x.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mob2x.jpg);
+    background-image: var(--bg-image-gradient), url(../images/hero-mob2x.jpg);
   }
 }
-@media screen and (min-width: 420px) {
+@media screen and (min-width: 480px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-tab.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tab.jpg);
+    background-image: var(--bg-image-gradient), url(../images/hero-tab.jpg);
   }
 }
-@media screen and (min-width: 420px) and (min-device-pixel-ratio: 2), screen and (min-width: 420px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 420px) and (min-resolution: 192dpi), screen and (min-width: 420px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-tablet2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet2x.jpg);
@@ -432,8 +446,7 @@ a {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+    background-image: var(--bg-image-gradient), url(../images/hero.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -533,7 +546,7 @@ a {
           justify-content: center;
   width: 100%;
   height: 100%;
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
 }
@@ -579,18 +592,9 @@ a {
 }
 
 .work {
+  display: none;
   padding-top: 0;
   padding-bottom: 94px;
-}
-@media screen and (min-width: 480px) {
-  .work {
-    display: none;
-  }
-}
-@media screen and (min-width: 768px) {
-  .work {
-    display: none;
-  }
 }
 @media screen and (min-width: 1200px) {
   .work {
@@ -605,6 +609,14 @@ a {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.work__card {
+  position: relative;
+  width: 370px;
+  -ms-flex-preferred-size: calc((100% - 60px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+  /* margin-right: 30px; */
 }
 
 .work__item {
@@ -631,16 +643,10 @@ a {
   gap: 30px;
 }
 
-.work__card {
-  position: relative;
-  width: 370px;
-  -ms-flex-preferred-size: calc((100% - 60px) / 3);
-      flex-basis: calc((100% - 60px) / 3);
-  /* margin-right: 30px; */
-}
-
 .work__img {
+  display: block;
   width: 100%;
+  height: auto;
 }
 
 /* .images:nth-child(3n) {
@@ -718,7 +724,7 @@ a {
 
 .team__photo {
   display: block;
-  width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
@@ -1357,6 +1363,7 @@ a {
 }
 
 .modal-checkbox {
+  display: block;
   position: relative;
   display: block;
   margin: 0;
@@ -1365,6 +1372,7 @@ a {
   line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+  margin-left: 20px;
 }
 @media screen and (min-width: 1200px) {
   .modal-checkbox {
@@ -1376,7 +1384,7 @@ a {
 .icon-checkbox {
   position: absolute;
   top: 50%;
-  left: 1px;
+  left: -12px;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   fill: transparent;
