--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,7 +8,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.header__btn-menu {
+.menu-toggle {
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -21,7 +21,7 @@
   }
 }
 
-.menu {
+.menu-container {
   position: fixed;
   display: block;
   top: 0;
@@ -30,6 +30,9 @@
   width: 100%;
   height: 100%;
   background-color: var(--white-proect-color);
+  transform: scale(0);
+  transform-origin: top right;
+  transition: transform var(--transition-time);
 
   > .menu-wrapper {
     height: 100%;
@@ -44,7 +47,11 @@
   }
 }
 
-.header__btn-close {
+.menu-container.is-open {
+  transform: scale(1);
+}
+
+.menu-wrapper .menu-toggle {
   position: absolute;
   top: 0;
   right: 0;
