--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,8 +1,5 @@
 .hero {
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+  background-image: var(--bg-image-gradient),
     url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-color: #c4c4c4;
@@ -16,25 +13,15 @@
   padding-bottom: 118px;
   text-align: center;
 
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
+  @include retina {
+    background-image: var(--bg-image-gradient),
       url(../images/hero-mob2x.jpg);
   }
 
-  @media screen and (min-width: 420px) {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
+  @media screen and (min-width: 480px) {
+    background-image: var(--bg-image-gradient),
       url(../images/hero-tab.jpg);
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include retina {
       background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
@@ -44,14 +31,9 @@
   }
 
   @media screen and (min-width: 768px) {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
+    background-image: var(--bg-image-gradient),
       url(../images/hero.jpg);
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
+    @include retina {
       background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
