--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -25,7 +25,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background: #f5f4fa;
+  background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
 }
