--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/tools';
 @import './utils/vars';
+@import './utils/mixins';
 @import './components/header';
 @import './components/logo';
 @import './components/nav';
