--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -5,5 +5,10 @@
     --accent-text-color: #2196f3;
     --white-proect-color: #ffffff;
     --transition-time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --bg-image-gradient: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    )
 }
+
 
