--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -8,9 +8,13 @@
 }
 
 .footer__conteiner {
-  display: flex;
+  display: block;
+
+  @media screen and (min-width: 480px) {
+    display: flex;
   flex-direction: column;
   align-items: center;
+  }
   
 
   @media screen and (min-width: 768px) {
