--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,8 +7,6 @@
   margin: auto;
   height: auto;
   max-width: 1600px;
-  // padding-top: 200px;
-  // padding-bottom: 200px;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
@@ -56,17 +54,19 @@
   font-weight: 900;
   font-size: 26px;
   line-height: 1.61;
-  // font-size: 44px;
-  // line-height: 1.36;
   max-width: 696px;
-
-  letter-spacing: 0.06em;
+letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-proect-color);
+
+  @media screen and (min-width: 768px) {
+    max-width: 360px;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 44px;
     line-height: 1.36;
+    max-width: 696px;
   }
 }
 
