--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -16,6 +16,7 @@
   @media screen and (min-width: 768px) {
     flex-direction: row;
     flex-wrap: wrap;
+
   }
 }
 
@@ -24,7 +25,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
   margin-bottom: 30px;
