--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -1,4 +1,6 @@
 .footer {
+  width: 100%;
+  max-width: 1200px;
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
@@ -67,6 +69,7 @@
 }
 
 .address__item {
+  
   margin-bottom: 8px;
 }
 
