--- a/sass/components/_footer-imput.scss
+++ b/sass/components/_footer-imput.scss
@@ -1,7 +1,7 @@
 .subscribe {
-  display: flex;
-  // align-items: flex-end;
- 
+  max-width: 1200px;
+  display: block;
+
 
    @media screen and (min-width: 1200px) {
   margin-left: auto;
@@ -28,15 +28,19 @@
   flex-direction: column;
   align-items: center;
 
+
     @media screen and (min-width: 1200px) {
+      display: flex;
+  
+  align-items: center;
   flex-direction: row;
   }
 }
 
 .subscribe__input {
-  display: flex;
+  display: inline-block;
   color: var(--white-proect-color);
-  width: 450px;
+  width: 100%;
   height: 50px;
   margin-top: 0;
   margin-bottom: 20px;
@@ -51,6 +55,10 @@
     border-color: var(--accent-text-color);
   }
 
+@media screen and (min-width: 480px) {
+  width: 450px;
+}
+
   @media screen and (min-width: 1200px) {
     width: 358px;
     margin-bottom: 0;
@@ -62,7 +70,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 200px;
+  
   height: 50px;
   padding: 10px 28px;
   font-family: inherit;
