--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,6 +7,7 @@
   margin: auto;
   height: auto;
   max-width: 1600px;
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
   text-align: center;
