--- a/sass/components/_peculiarities.scss
+++ b/sass/components/_peculiarities.scss
@@ -21,6 +21,7 @@
 }
 
 .peculiarities__meta {
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,6 +33,8 @@
 }
 
 .peculiarities__elements {
+  display: block;
+  
  
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 30px) / 2);
