--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -36,8 +36,6 @@
 }
 
 .team__workers {
-  // width: calc((100% - 90px) / 4);
-
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
@@ -62,8 +60,10 @@
 }
 
 .team__photo {
+  width: 100%;
+  max-width: 1200px;
   display: block;
-  max-width: 100%;
+
   height: auto;
 }
 
