--- a/sass/utils/_tools.scss
+++ b/sass/utils/_tools.scss
@@ -24,7 +24,7 @@ img {
 }
 
 .container {
-  width: 1230px;
+  max-width: 1230px;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
