--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,8 +23,8 @@
   top: 50%;
   left: 50%;
   padding: 40px;
-
-  min-width: 450px;
+  width: 100%;
+  max-width: 450px;
   min-height: 609px;
   text-align: center;
   background-color: var(--white-proect-color);
