--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,7 +8,7 @@
   }
 }
 
-.header-border {
+.header {
   border-bottom: 1px solid #ececec;
 }
 
@@ -36,6 +36,7 @@
   padding: 48px 40px;
   width: 100%;
   height: 100%;
+  z-index: 1;
   background-color: var(--white-proect-color);
   transform: scale(0);
   transform-origin: top right;
