--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -1,47 +1,63 @@
 .portfolio.list {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
+  }
 }
 
 .portfolio-button {
-    margin-right: 8px;
+  display: inline-block;
+  margin-right: 8px;
+
+  &:first-child {
+    margin-bottom: 15px;
+  }
 }
 
 .portfolio-button:last-child {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .portfolio.list {
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-bottom: 34px;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .portfolio {
+  padding-bottom: 60px;
+  padding-top: 60px;
+
+  @media screen and (min-width: 1200px) {
     padding-bottom: 94px;
     padding-top: 94px;
+  }
 }
 
 .second.button {
-    display: inline-block;
-    padding: 6px 22px;
-    color: var(--primary-text-color);
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    border: none;
-    transition: color var(--transition-time), background-color var(--transition-time), box-shadow var(--transition-time);
-    
+  display: inline-block;
+  padding: 6px 22px;
+  color: var(--primary-text-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  border: none;
+  transition: color var(--transition-time),
+    background-color var(--transition-time), box-shadow var(--transition-time);
 }
 
 .second.button:hover,
 .second.button:focus {
-    color: var(--white-proect-color);
-    background-color: var(--accent-text-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: var(--white-proect-color);
+  background-color: var(--accent-text-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
