--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -1,83 +1,100 @@
 .portfolio-imgs {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+
+   @media screen and (min-width: 768px) {
+   flex-wrap: wrap;
+   flex-direction: row;
+  }
 }
 
 .wrap {
-    position: relative;
-    overflow: hidden;
+  position: relative;
+  overflow: hidden;
+  flex-grow: 1;
 }
 
 .portfolio-wrapper {
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding-top: 63px;
-    padding-right: 24px;
-    padding-bottom: 63px;
-    padding-left: 24px;
-    width: 100%;
-    height: 100%;
-    background: rgba(33, 150, 243, 0.9);
-    font-size: 18px;
-    line-height: 1.56;
-    color: var(--white-proect-color);
-    opacity: 0;
-    transform: translateY(100%);
-    transition: transform var(--transition-time), opacity var(--transition-time);
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-top: 63px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--white-proect-color);
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform var(--transition-time), opacity var(--transition-time);
 }
 
 .portfolio-card:hover .portfolio-wrapper {
-    opacity: 1;
-    transform: translateY(0%);
+  opacity: 1;
+  transform: translateY(0%);
 }
 
 .portfolio-img {
-    display: block;
-    width: 100%;
-    height: auto;
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .cards {
+ 
+  @media screen and (min-width: 768px) {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 60px) / 3);
+  }
+}
+
+
+.portfolio-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .title-sites {
-    padding: 20px 24px;
-    border-bottom: 1px solid #eeeeee;
-    border-right: 1px solid #eeeeee;
-    border-left: 1px solid #eeeeee;
+  padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .portfolio-title {
-    margin-top: 0;
-    margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .portfolio .portfolio-title {
-    color: var(--primary-text-color);
+  color: var(--primary-text-color);
 }
 
 .portfolio-sites {
-    margin: 0;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
-    color: var(--secondary-text-color);
+  margin: 0;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
 }
 
-.portfolio-card {
-    display: block;
-}
 
 .portfolio-card:hover {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
